# trigger6

./: .gitignore  Makefile  README.md  trigger6.h  trigger6_commands.c  trigger6_connector.c  trigger6_drv.c  ubuntu_T6_260223.run
captures/: 1080p_video_headers.csv  session7_commands_07_4k_only_mid40k.csv  session7_rects_test_usbpcapcmd_snap2m_motion.csv  session7_truncated_large_rect_previews.csv  type7_address_capture_handoff.md  type7_motion_fullscreen_colors.pcapng  type7_motion_fullscreen_colors_fullsnap.pcap  type7_motion_horizontal_bands.pcapng  type7_motion_large_rects.pcapng  type7_motion_vertical_bands.pcapng  win_type7_addr_grid_64x64.pcapng  win_type7_addr_grid_64x64_analysis.txt  win_type7_addr_xscan_64x64.pcapng  win_type7_addr_xscan_64x64_analysis.txt  win_type7_addr_yscan_64x64.csv  win_type7_addr_yscan_64x64_analysis.txt  win_type7_addr_yscan_64x64_fullsnap.pcap  win_youtube_playback_2s_summary.txt
captures/replay_jpeg/win02_type3_fullframe/: 2026-06-19_jua365_win_02_hdmi1_hotplug_idx002_frame7451_type03_1920x1080.json  2026-06-19_jua365_win_02_hdmi1_hotplug_manifest.json
captures/replay_jpeg/win02_type3_fullframe_eoi/: 2026-06-19_jua365_win_02_hdmi1_hotplug_idx001_frame7447_type03_1920x1080.json  2026-06-19_jua365_win_02_hdmi1_hotplug_idx003_frame7455_type03_1920x1080.json
captures/type7_address_patterns/: type7_addr_grid_64x64.csv  type7_addr_grid_64x64.html  type7_addr_xscan_64x64.csv  type7_addr_xscan_64x64.html  type7_addr_yscan_64x64.csv  type7_addr_yscan_64x64.html  type7_motion_fullscreen_colors.csv  type7_motion_fullscreen_colors.html  type7_motion_horizontal_bands.csv  type7_motion_horizontal_bands.html  type7_motion_large_rects.csv  type7_motion_large_rects.html  type7_motion_vertical_bands.csv  type7_motion_vertical_bands.html  type7_partial_modal_fade.html  type7_partial_moving_rect.html  type7_partial_ui_changes.html  type7_partial_video_region.html
captures/type7_motion_youtube_2s_fullsnap_min_group/: manifest.json
docs/: linux-driver-gap-analysis.md  mac-driver-roadmap.md  mct-trigger6-analysis-handoff.md  reverse-engineering-notes.md  t6indisp-ghidra-analysis-2026-06-28.md  type4-setup-slot-analysis-2026-06-28.md  type7-deep-dive-2026-06-23.md  type7-size-decision-pseudocode-2026-06-28.md  ubuntu-driver-deep-dive.md  windows-capture-guide.md  windows-codex-next-type7-address-capture.md  windows-codex-next-type7-motion-capture.md
ghidra_scripts/: T6DecompileAddrs.java  T6StringXrefs.java
mac/: README.md
mac/t6proto/: Makefile
mac/t6proto-rs/: Cargo.toml  build.rs
mac/t6proto-rs/src/: lib.rs  macos_virtual_display.m  macos_vt_jpeg_probe.m  usb.rs
mac/t6proto/include/: t6proto.h
tools/: generate_type7_address_patterns.py  t6_extract_jpeg_payloads.py  t6_image_crop_zoom.py  t6_jpeg_compare.sh  t6_jpeg_inspect.py  t6_pcap_summary.py  t6_reassemble_video.py  t6_type7_geometry.py  t6_type7_timeline.py
(+24 files in other folders)
