[package]
name = "t6proto"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"
publish = false

[lib]
name = "t6proto"
path = "src/lib.rs"

[features]
default = []
usb = ["dep:rusb"]

[[bin]]
name = "t6-probe"
path = "src/bin/t6-probe.rs"
required-features = ["usb"]

[[bin]]
name = "t6-send-jpeg"
path = "src/bin/t6-send-jpeg.rs"
required-features = ["usb"]

[[bin]]
name = "t6-stream-test"
path = "src/bin/t6-stream-test.rs"
required-features = ["usb"]

[[bin]]
name = "t6-play-video"
path = "src/bin/t6-play-video.rs"
required-features = ["usb"]

[[bin]]
name = "t6-virtual-display"
path = "src/bin/t6-virtual-display.rs"
required-features = ["usb"]

[[bin]]
name = "t6-vt-jpeg-probe"
path = "src/bin/t6-vt-jpeg-probe.rs"

[dependencies]
ffmpeg-next = { version = "8.1.0", default-features = false, features = ["codec", "format", "software-scaling"] }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp", "bmp", "tiff"] }
rusb = { version = "0.9", optional = true }
turbojpeg = { version = "1.4.0", default-features = false, features = ["pkg-config", "image"] }
turbojpeg-sys = { version = "1.2.0", default-features = false, features = ["pkg-config"] }

[build-dependencies]
cc = "1.2.47"
